--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sequelize-cli": "^6.6.2"
   },
   "name": "pupil-first",
   "version": "1.0.0",
@@ -133,6 +135,7 @@
     "micromatch": "^4.0.8",
     "mimic-fn": "^2.1.0",
     "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
     "ms": "^2.1.3",
     "natural-compare": "^1.4.0",
     "node-int64": "^0.4.0",
@@ -149,6 +152,8 @@
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "picocolors": "^1.1.1",
     "picomatch": "^2.3.1",
     "pirates": "^4.0.6",
@@ -163,6 +168,7 @@
     "resolve-from": "^5.0.0",
     "resolve.exports": "^2.0.2",
     "semver": "^6.3.1",
+    "sequelize": "^6.37.5",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "signal-exit": "^3.0.7",
@@ -200,7 +206,9 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "jest",
+    "db:create:test": "cross-env NODE_ENV=test npx sequelize-cli db:create",
+    "pretest": "cross-env NODE_ENV=test npx sequelize-cli db:drop && cross-env NODE_ENV=test npx sequelize-cli db:create",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
     "prepare": "husky install"
   },
   "author": "",
